k8s/daapd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: daapd
  labels:
    app: daapd
spec:
  selector:
    app: daapd
  ports:
    - name: "webui"
      protocol: TCP
      targetPort: 3689
      port: 3689
